[package]
name = "pslinkb"
version = "0.3.3"
edition = "2024"
description = "PS5 to Bilibili Live Streaming Bridge"
license = "MIT OR Apache-2.0"
default-run = "pslinkb"

[[bin]]
name = "pslinkb"
path = "src/main.rs"

# ==================== 核心依赖 ====================
[dependencies]
blivemsg = "0.2.4"

# 异步运行时
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
futures-util = "0.3.32"

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rtmp-rs = "0.5.0"

# Trait 支持
async-trait = "0.1.89"

# 工具库
thiserror = "2.0.18"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }

reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls-no-provider",
    "json",
    "cookies",
] }

md5 = "0.8.0"

# TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# libc for raw socket operations
libc = "0.2"

# ==================== 桌面模式 ====================

clap = { version = "4.6.1", features = ["derive"], optional = true }
toml = { version = "1.1.2", optional = true }

# 扫码登录
qrcode = { version = "0.14.1", optional = true }
image = { version = "0.25.10", optional = true }
url = { version = "2.5.8", optional = true }

# DNS 重定向
hickory-proto = { version = "0.26.1", optional = true }

# ==================== Release 优化 ====================
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# ==================== Features ====================
[features]
default = []
cli = ["clap", "toml", "qrcode", "image", "url"]

# 弹幕通道模式 - 二选一, 互斥
channel-mpsc = []
channel-broadcast = []

protobuf-support = ["blivemsg/protobuf-support"]

# OpenWRT 平台
openwrt = []

# ffmpeg 模式 - 二选一, 互斥
external-ffmpeg = []
ffi-ffmpeg = []

# DNS 重定向
dns-redirect = ["hickory-proto"]

# 调试日志: 启用则 dlog! 编译为输出(诊断), 不启用则编译成空(零开销)
debug-log = []

[build-dependencies]
cc = "1"
